--- a/03analysis.ipynb
+++ b/03analysis.ipynb
@@ -835,7 +835,7 @@
     "print(\"Frequency, Percentage, and Cumulative Percentage of Residence:\")\n",
     "print(residence_summary_df)\n",
     "\n",
-    "# Save the cleaned DataFrame to cleandata.csv\n",
+    "# Save the cleaned DataFrame to csv\n",
     "residence_summary_df.to_csv('residence.csv', index=False)\n",
     "print(\"\\nDataFrame has been saved as residence.csv\")\n",
     "\n",
@@ -1488,7 +1488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
