--- a/04_reliability_alpha.ipynb
+++ b/04_reliability_alpha.ipynb
@@ -4,26 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Factor analysis explores the underlying structure of the variables and identify latent factors that may explain the relationships among them."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The Kaiser-Meyer-Olkin (KMO) measure of sampling adequacy is used to determine whether the data is suitable for factor analysis. It measures the proportion of variance among variables that might be common variance, meaning that it is due to underlying factors. The KMO statistic ranges between 0 and 1, with values closer to 1 indicating that the data is well suited for factor analysis.\n",
-    "\n",
-    "A KMO value above 0.6 is generally considered acceptable, while values closer to 1 indicate a better fit for factor analysis.\n",
-    "\n",
-    "In your case, the KMO value is 0.563, which is below the threshold of 0.6. This suggests that the correlation structure of the variables is not suitable for factor analysis. In other words, the variables may not be highly related to each other, and the factor analysis results may not be reliable.\n",
-    "\n",
-    "Additionally, Bartlett's test of sphericity is a statistical test used to determine whether the correlation matrix of the variables is significantly different from an identity matrix, which would indicate that the variables are related. The p-value associated with this test is very small (2.0861320020439854e-15), indicating that the correlations between the variables are statistically significant, and thus factor analysis may be appropriate for this dataset."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Cronbach's alpha is a statistic used to measure the internal consistency reliability of a scale or a set of items designed to measure a latent construct.\n",
     "Cronbach's alpha, a measure of internal consistency reliability, can range from 0 to 1. Here's a general guideline for interpreting Cronbach's alpha values in terms of internal consistency:\n",
     "\n",
@@ -35,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +30,8 @@
       "4  Openness to Experience              0.49\n",
       "5            Extraversion              0.46\n",
       "6        Honesty-Humidity              0.45\n",
-      "7                Attitude              0.64\n",
+      "7               Intention              0.65\n",
+      "8                Attitude              0.64\n",
       "\n",
       "DataFrame has been saved as cronbach_alpha.csv\n"
      ]
@@ -72,6 +53,7 @@
     "    'Openness to Experience': ['P-OX-Aesthetic_appreciation', 'P-OX-Inquisitiveness', 'P-OX-Creativity', 'P-OX-Unconventionality'],\n",
     "    'Extraversion': ['P-E-Social_boldness', 'P-E-Social_self-esteem', 'P-E-Sociability', 'P-E-Liveliness'],\n",
     "    'Honesty-Humidity': ['P-HH-Modesty', 'P-HH-Greed avoidance', 'P-HH-Fairness', 'P-HH-Sincerity'],\n",
+    "    'Intention': ['INT-passenger', 'INT-driver'],\n",
     "    'Attitude': ['ATT-Favourable', 'ATT-Smart']\n",
     "}\n",
     "\n",
@@ -108,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
