--- a/05_factor.ipynb
+++ b/05_factor.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,6 @@
     "# Load the dataset\n",
     "data = pd.read_csv('cleandata.csv')\n",
     "\n",
-    "# Select the variables for factor analysis\n",
     "selected_variables = [\n",
     "    'V-SE-Power', 'V-SE-Achievement', \n",
     "    'V-O-Hedonism', 'V-O-Stimulation', 'V-O-Self_direction',\n",
@@ -109,11 +108,9 @@
     "    'P-HH-Fairness', 'P-HH-Sincerity']\n",
     "\n",
     "\n",
-    "\n",
-    "# Create a subset of the data containing only the selected variables\n",
     "subset_data = data[selected_variables]\n",
     "\n",
-    "# Calculating the Kaiser-Meyer-Olkin (KMO) measure of sampling adequacy\n",
+    "# Kaiser-Meyer-Olkin (KMO) measure of sampling adequacy\n",
     "kmo_all, kmo_model = calculate_kmo(subset_data)\n",
     "print(\"KMO:\", kmo_model)\n",
     "\n",
@@ -133,7 +130,7 @@
     "# Set variable names as row and column indices\n",
     "factor_loadings_df = pd.DataFrame(factor_loadings, index=selected_variables, columns=[f'Factor {i}' for i in range(1, 8)])\n",
     "\n",
-    "# Print the factor loadings\n",
+    "\n",
     "print(\"Factor Loadings:\")\n",
     "print(factor_loadings)\n",
     "\n",
@@ -145,82 +142,6 @@
     "plt.xlabel('Factors')\n",
     "plt.ylabel('Variables')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "KMO (Kaiser-Meyer-Olkin Measure of Sampling Adequacy):\n",
-    "\n",
-    "KMO measures the suitability of data for factor analysis. It ranges from 0 to 1, where values closer to 1 indicate that the data are more suitable for factor analysis.\n",
-    "In this case case, the KMO value is 0.6459, which suggests that the variables are moderately suitable for factor analysis.\n",
-    "\n",
-    "Bartlett's Test of Sphericity:\n",
-    "\n",
-    "Bartlett's test assesses whether the observed variables intercorrelate at all using the observed correlation matrix against the identity matrix.\n",
-    "The null hypothesis is that the variables are uncorrelated in the population.\n",
-    "The p-value associated with Bartlett's test is very low (close to 0), indicating that there is sufficient evidence to reject the null hypothesis, suggesting that the correlation matrix is significantly different from an identity matrix. In other words, correlations between variables exist, supporting the appropriateness of factor analysis.\n",
-    "\n",
-    "Factor Loadings:\n",
-    "\n",
-    "Factor loadings represent the correlation between the variables and the factors extracted from the data.\n",
-    "Each row corresponds to a variable, and each column corresponds to a factor.\n",
-    "Higher absolute values of factor loadings indicate a stronger relationship between the variable and the factor.\n",
-    "Factors with loadings greater than 0.3 or less than -0.3 are typically considered significant.\n",
-    "In your results, each cell represents the factor loading of a variable on a specific factor. Positive values indicate a positive correlation, while negative values indicate a negative correlation.\n",
-    "For example, the value 0.6217 in the third column suggests that the variable represented by that row has a relatively strong positive correlation with the third factor.\n",
-    "Overall, these results suggest that the variables in your dataset are moderately suitable for factor analysis, there is evidence of correlation among the variables, and the factor loadings provide insights into the relationships between variables and factors extracted from the data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "'Age',\n",
-    "'Residence',\n",
-    "'V-SE-Power',\n",
-    "'V-SE-Achievement',\n",
-    "'AVG-V-Self-Enhacemen',\n",
-    "'V-O-Hedonism',\n",
-    "'V-O-Stimulation',\n",
-    "'V-O-Self_direction',\n",
-    "'AVG-V-Openness_to_change',\n",
-    "'V-ST-Universalism',\n",
-    "'V-ST-Benevolence',\n",
-    "'AVG-V-Self_transcendence',\n",
-    "'V-C-Tradition',\n",
-    "'V-C-Conformity',\n",
-    "'V-C-Security',\n",
-    "'AVG-V-Conservation',\n",
-    "'P-OX-Aesthetic_appreciation',\n",
-    "'P-OX-Inquisitiveness',\n",
-    "'P-OX-Creativity',  \n",
-    "'P-OX-Unconventionality',\n",
-    "'P-E-Liveliness',\n",
-    "'AVG-P-Opennes_to_experience',\n",
-    "'P-E-Social_self-esteem',\n",
-    "'P-E-Social_boldness',\n",
-    "'P-E-Sociability',\n",
-    "'AVG-P-Extraversion',\n",
-    "'P-HH-Modesty',\n",
-    "'P-HH-Greed avoidance',\n",
-    "'P-HH-Fairness',\n",
-    "'P-HH-Sincerity',\n",
-    "'AVG-P-Honesty-Humility',\n",
-    "'ATT-Favourable',\n",
-    "'ATT-Smart',\n",
-    "'AVG-ATT',\n",
-    "'BEH-take_part',\n",
-    "'BEH-passenger-usage',\n",
-    "'BEH-driver-usage',\n",
-    "'INT-passenger',\n",
-    "'INT-driver'"
    ]
   }
  ],
